EE-869: Applies Profile locations bug fix from Sprint 15 * Fixes Save button shifting to bottom of page * Fixes issue where selecting Back when multiple zip codes available caused problems

--- a/drupal/sites/all/themes/eenterprise/sass/styles.scss
+++ b/drupal/sites/all/themes/eenterprise/sass/styles.scss
@@ -1892,6 +1892,7 @@ form[id^='user-profile-form'] {
 			clip: auto;
 		  position: static;
 		  margin-right: 5px;
+		  float:none;
 		}
 		#user-profile-select-zip, #user-profile-back-zip {
 		  display: inline-block;
